crates/uitest/fixtures/ty_check/assign.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/assign.fe
---
error[8-0000]: type mismatch
   ┌─ assign.fe:29:11
   │
29 │     g.t = 1
   │           ^ expected `bool`, but `{integer}` is given

error[8-0000]: type mismatch
   ┌─ assign.fe:36:17
   │
36 │             t = 1
   │                 ^ expected `T`, but `{integer}` is given

error[8-0017]: not assignable left-hand side of assignment
   ┌─ assign.fe:31:5
   │
31 │     1 = 1
   │     ^ cant assign to this expression

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:21:9
   │
20 │     fn set_inner(self, x: i32, y: u32) {
   │                  ---- try changing to `mut self`
21 │         self.inner = Inner { x, y }
   │         ^^^^^^^^^^ immutable assignment

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:26:5
   │
25 │ fn foo<T>(x: i32, mut y: u32, opt: Option<T>, opt2: Option<i32>) {
   │           - try changing to `mut x`
26 │     x = 1
   │     ^ immutable assignment

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:43:13
   │
42 │         Some(x) => {
   │              - try changing to `mut x`
43 │             x = 1
   │             ^ immutable assignment

error[8-0031]: type annotation is needed
   ┌─ assign.fe:31:5
   │
31 │     1 = 1
   │     ^
   │     │
   │     type annotation is needed
   │     no default type is provided for an integer type. consider giving integer type


